@@ -20,6 +20,7 @@ Changes in 2.2.1
        established
 * FIX: afpd: fix a crash when searching for a UUID that is not a special
        local UUID and LDAP support is not compiled in
+* FIX: afpd: .volinfo file not created on first volume access if user in rolist
 * FIX: cnid_dbd: increase BerkeleyDB locks and lockobjs
 * FIX: cnid_dbd: implement -d option, deletes CNID db
 * FIX: suse: initscript return better status
